# cli-llm-agent

./: .gitignore  Cargo.toml  INSTRUCTION.md  INTRODUCTION.md
batman_agent/: INTRODUCTION.md
mouse_electronics_agent/: INSTRUCTION.md  INTRODUCTION.md
mouse_planning_agent/: INSTRUCTION.md  INTRODUCTION.md
mouse_scout_agent/: INSTRUCTION.md  INTRODUCTION.md
mouse_unlocker_agent/: INSTRUCTION.md  INTRODUCTION.md
nils_bohr_agent/: INSTRUCTION.md  INTRODUCTION.md
src/: adk.rs  main.rs  matrix.rs  matrix_adk_agent.rs  matrix_agent.rs
