[package]
name = "matrix-adk-agent-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"

[dependencies]
adk-rust = { features = ["openai", "tools"], path = "../adk-rust/adk-rust" }
anyhow = "1.0.104"
dotenvy = "0.15.7"
matrix-sdk = { version = "0.18.0", features = ["sqlite"] }
serde_json = "1.0"
tokio = { version = "1.53.0", features = ["default"] }
async-openai = "0.41.1"

[patch.crates-io]
adk-rust = { path = "../adk-rust/adk-rust" }
adk-model = { path = "../adk-rust/adk-model" }
async-openai = { path = "../async-openai/async-openai" }